# sql-rag-system

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/agents/: __init__.py  base_agent.py
backend/app/agents/orchestrator_agent/: __init__.py  model.py  prompts.py  tools.py
backend/app/agents/plotting_agent/: __init__.py  model.py  prompts.py  tools.py
backend/app/agents/rag_agent/: __init__.py  model.py  prompts.py  tools.py
backend/app/agents/sql_agent/: __init__.py  model.py  prompts.py  tools.py
backend/app/api/: router.py
backend/app/models/: schemas.py
backend/app/models/agents/: __init__.py  base.py  orchestrator.py  plotting.py  rag.py  sql.py
backend/app/utils/: __init__.py  database.py  helpers.py  manager.py
backend/scripts/: ingest_pdf_to_faiss.py  ingest_sqlite_to_sql.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/agents/plotting/create/: route.ts
frontend/src/app/api/agents/query/: route.ts
frontend/src/app/api/agents/rag/query/: route.ts
frontend/src/app/api/agents/sql/query/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/components/: MainChat.tsx  chat-test.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: card.tsx  scroll-area.tsx
frontend/src/config/: app-config.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
